WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
89532
[V8] Fix issue where a callback got a null calling context
https://bugs.webkit.org/show_bug.cgi?id=89532
Summary
[V8] Fix issue where a callback got a null calling context
Erik Arvidsson
Reported
2012-06-19 16:54:20 PDT
[V8] Fix issue where a callback got a null calling context
Attachments
Patch
(3.77 KB, patch)
2012-06-19 16:56 PDT
,
Erik Arvidsson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Erik Arvidsson
Comment 1
2012-06-19 16:56:04 PDT
Created
attachment 148459
[details]
Patch
Erik Arvidsson
Comment 2
2012-06-19 16:57:18 PDT
See
http://code.google.com/p/chromium/issues/detail?id=130462
for more details
Kentaro Hara
Comment 3
2012-06-19 17:06:52 PDT
Comment on
attachment 148459
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=148459&action=review
The change looks OK.
> Source/WebCore/bindings/v8/custom/V8DOMWindowCustom.cpp:309 > + return V8Proxy::throwTypeError(0, args.GetIsolate());
0 will output "Type error". What error message does JSC throw? (We want to keep the error message consistent between JSC and V8.)
Erik Arvidsson
Comment 4
2012-06-19 17:30:08 PDT
(In reply to
comment #3
)
> (From update of
attachment 148459
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=148459&action=review
> > The change looks OK. > > > Source/WebCore/bindings/v8/custom/V8DOMWindowCustom.cpp:309 > > + return V8Proxy::throwTypeError(0, args.GetIsolate()); > > 0 will output "Type error". What error message does JSC throw? (We want to keep the error message consistent between JSC and V8.)
Yup. I wanted to use 0 to match JSC.
Kentaro Hara
Comment 5
2012-06-19 17:30:45 PDT
Comment on
attachment 148459
[details]
Patch Thanks for the clarification.
WebKit Review Bot
Comment 6
2012-06-19 18:04:16 PDT
Comment on
attachment 148459
[details]
Patch Clearing flags on attachment: 148459 Committed
r120783
: <
http://trac.webkit.org/changeset/120783
>
WebKit Review Bot
Comment 7
2012-06-19 18:04:20 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug