[V8] Fix issue where a callback got a null calling context https://bugs.webkit.org/show_bug.cgi?id=89532

Reviewed by Kentaro Hara.

Source/WebCore:

Test: fast/dom/Window/post-message-crash.html

* bindings/v8/custom/V8DOMWindowCustom.cpp:
(WebCore::handlePostMessageCallback): Check the calling context and throw a type error (like JSC) if it is null.

LayoutTests:

* fast/dom/Window/post-message-crash-expected.txt: Added.
* fast/dom/Window/post-message-crash.html: Added.


Canonical link: https://commits.webkit.org/107385@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@120783 268f45cc-cd09-0410-ab3c-d52691b4dbfc